trying to fix button issue on mobile

--- a/my-sites/Simple-Blog/css/styles.css
+++ b/my-sites/Simple-Blog/css/styles.css
@@ -10,7 +10,7 @@ h1, h3{
 form label {
 	color: white;
 }
-button {
+.btn {
 	cursor: pointer;
 	cursor: hand;
 }
